fix yolov8 code

--- a/mgmt/configs/yolov8n.cfg
+++ b/mgmt/configs/yolov8n.cfg
@@ -11,8 +11,7 @@ log_con=1
 log_dir=$SOYNET_HOME/mgmt/logs
 disp_model=1
 prec_mode=f32
-plugin_dir=$SOYNET_HOME/lib/$PLUGIN_DIR
-
+plugin_dir=$SOYNET_HOME/lib/plugins
 [input] refname=XX shape=$BATCH_SIZE,$RE_SIZE,3 dtype=u8
 [preproc] mode=generic bgr=1 pad_value=114 std=255 hwc=1 pad=$TOP,$BOTTOM,$LEFT,$RIGHT pre_order=1,0 refname=PREPROC
 
