--- a/SamplesPY/maskRCNN/Weights/requirements.txt
+++ b/SamplesPY/maskRCNN/Weights/requirements.txt
@@ -1,14 +1,8 @@
 # Usage: pip install -r requirements.txt
-
-numpy
-scipy
-Pillow
-cython
-matplotlib
-scikit-image
-tensorflow>=1.3.0
-keras>=2.0.8
+numpy==1.24.3
+torch==1.11.0
+torchvision==0.12.0
+tqdm==4.65.0
 opencv-python
-h5py
-imgaug
-IPython[all]
+
+#after pip install -r requirements.txt -> pip install git+https://github.com/facebookresearch/detectron2.git
